refactor: use Math.clamp in camera bounds helpers (#162)